force-app/main/default/objects/Notification_Settings__mdt/Notification_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Notification Settings</label>
    <pluralLabel>Notifications Settings</pluralLabel>
</CustomObject>