force-app/main/default/objects/Notification_Settings__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARE SERVICE</fullName>
                <default>true</default>
                <label>CARE SERVICE</label>
            </value>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>ONLINE APPOINTMENT</fullName>
            </value>
            <value>
                <fullName>POST CONTACT</fullName>
            </value>
            <value>
                <fullName>WECHAT ONLINE APPOINTMENT</fullName>
            </value>
            <value>
                <fullName>EXCLUSIVE EXPERIENCE</fullName>
            </value>
            <value>
                <fullName>DISTANT CARE SERVICE</fullName>
            </value>
            <value>
                <fullName>WECHAT DIAMOND APPOINTMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>