force-app/main/default/objects/Notification_Settings__mdt/fields/Delay_Time__c.field-meta.xml
<CustomField>
    <fullName>Delay_Time__c</fullName>
    <description>Hours</description>
    <inlineHelpText>Hours</inlineHelpText>
    <label>Delay Time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>