force-app/main/default/objects/Notification_Settings__mdt/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>