force-app/main/default/objects/Notification_Settings__mdt/fields/Update_Statut_Every__c.field-meta.xml
<CustomField>
    <fullName>Update_Statut_Every__c</fullName>
    <description>Days</description>
    <inlineHelpText>Days</inlineHelpText>
    <label>Update Statut Every</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>