force-app/main/default/objects/Notification_Settings__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Application__c</columns>
    <columns>Channel__c</columns>
    <columns>Message_Id__c</columns>
    <columns>Scenario__c</columns>
    <columns>Description__c</columns>
    <columns>Delay_Time__c</columns>
    <columns>Clean_Up_Every__c</columns>
    <columns>Update_Statut_Every__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>